--- a/source/timemory/components/user_bundle/CMakeLists.txt
+++ b/source/timemory/components/user_bundle/CMakeLists.txt
@@ -20,3 +20,6 @@ build_intermediate_library(
     SOURCES             ${source_files}
     DEPENDS             ${DEPS}
     PROPERTY_DEPENDS    GLOBAL COMPONENT)
+
+list(REMOVE_ITEM source_files ${CMAKE_CURRENT_SOURCE_DIR}/extern.cpp)
+timemory_install_header_files(${source_files})
