--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -135,9 +135,7 @@ if(NOT DEFINED TIMEMORY_INLINE_COMPILER_INSTRUMENTATION)
 endif()
 
 # get the enabled languages for the project to check if we need to enable them
-get_property(ENABLED_LANGUAGES
-             DIRECTORY ${PROJECT_SOURCE_DIR}
-             PROPERTY ENABLED_LANGUAGES)
+get_property(ENABLED_LANGUAGES GLOBAL PROPERTY ENABLED_LANGUAGES)
 
 foreach(_LANG ${TIMEMORY_LANGUAGES})
     if(NOT "${_LANG}" IN_LIST ENABLED_LANGUAGES)
