--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -6,9 +6,18 @@ jobs:
     continue-on-error: false
     strategy:
       matrix:
+        # compiler: ['gcc-6', 'gcc-7', 'gcc-8', 'gcc-9', 'gcc-10', 'clang-6.0', 'clang-7', 'clang-8', 'clang-9', 'clang-10', 'clang-11', 'clang-12']
+        cmake_build_type: ['Release']
         compiler: ['gcc-9', 'gcc-10', 'clang-8', 'clang-9', 'clang-10', 'clang-11', 'clang-12']
         standard: ['17']
-        # compiler: ['gcc-6', 'gcc-7', 'gcc-8', 'gcc-9', 'gcc-10', 'clang-6.0', 'clang-7', 'clang-8', 'clang-9', 'clang-10', 'clang-11', 'clang-12']
+        tools: ['avail kokkos kokkos-config dyninst mpip ncclp mallocp compiler']
+        extra_args: ['--python']
+        include:
+          - build_type: 'Debug'
+            compiler: 'gcc-7'
+            standard: '17'
+            tools: ['dyninst mpip ncclp mallocp']
+            extra_args: '--coverage'
     runs-on: self-hosted
     steps:
       - name: Checkout Code
@@ -17,20 +26,12 @@ jobs:
           submodules: true
       - name: Build and Test
         run: |
-          module use /opt/modulefiles/compilers
-          module use /opt/modulefiles/python
-          module load cuda
-          module load likwid
-          module load tau
-          module load anaconda
           source activate timemory
-          spack load boost dyninst
-          spack load /p6k245n
-          TOOLS="avail kokkos kokkos-config dyninst mpip ncclp mallocp compiler"
-          BASE_ARGS="--papi --python --likwid --mpi --cuda --cupti --nvtx --gotcha --caliper --extra-optimizations --tools ${TOOLS} -SF --pyctest-model=Continuous -j 6"
+          spack load boost dyninst papi
+          BASE_ARGS="--papi --likwid --mpi --cuda --cupti --gotcha --caliper --extra-optimizations --tools ${{ matrix.tools }} -SF --pyctest-model=Continuous -j 6"
           CTEST_ARGS="-V"
           CMAKE_ARGS="-DPYTHON_EXECUTABLE=$(which python) -G Ninja"
           export CC=${{ matrix.compiler }}
           export CXX="$(echo '${{ matrix.compiler }}' | sed 's/gcc/g++/1' | sed 's/clang/clang++/1')"
-          python ./pyctest-runner.py --cxx-standard=${{ matrix.standard }} ${BASE_ARGS} -- ${CTEST_ARGS} -- ${CMAKE_ARGS}
-          cmake --build build-timemory/Linux --target install --parallel 8
+          python ./pyctest-runner.py --cxx-standard=${{ matrix.standard }} --pyctest-build-type=${{ matrix.build_type }} ${{ matrix.extra_args }} ${BASE_ARGS} -- ${CTEST_ARGS} -- ${CMAKE_ARGS} -DCMAKE_INSTALL_PREFIX=${PWD}/install-timemory
+          cmake --build build-timemory/Linux --target all --parallel 8
