--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -3,12 +3,14 @@ on: [push, pull_request]
 
 jobs:
   maeve-ci:
-    continue-on-error: false
+    continue-on-error: true
     strategy:
+      max-parallel: 2
+      fail-fast: false
       matrix:
         # compiler: ['gcc-6', 'gcc-7', 'gcc-8', 'gcc-9', 'gcc-10', 'clang-6.0', 'clang-7', 'clang-8', 'clang-9', 'clang-10', 'clang-11', 'clang-12']
-        cmake_build_type: ['Release']
-        compiler: ['gcc-9', 'gcc-10', 'clang-8', 'clang-9', 'clang-10', 'clang-11', 'clang-12']
+        build_type: ['Release']
+        compiler: ['gcc-9', 'gcc-10', 'clang-10', 'clang-11', 'clang-12']
         standard: ['17']
         tools: ['avail kokkos kokkos-config dyninst mpip ncclp mallocp compiler']
         extra_args: ['--python']
@@ -17,7 +19,7 @@ jobs:
             compiler: 'gcc-7'
             standard: '17'
             tools: 'dyninst mpip ncclp mallocp'
-            extra_args: '--coverage'
+            extra_args: '--coverage --minimal'
     runs-on: self-hosted
     steps:
       - name: Checkout Code
