--- a/examples/ex-cpu-roofline/CMakeLists.txt
+++ b/examples/ex-cpu-roofline/CMakeLists.txt
@@ -10,7 +10,7 @@ project(timemory-CPU-Roofline-Example LANGUAGES C CXX)
 set(EXE_NAME ex_cpu_roofline)
 set(COMPONENTS compile-options analysis-tools cpu-roofline ert component)
 
-find_package(timemory REQUIRED COMPONENTS ${COMPONENTS} OPTIONAL_COMPONENTS mpi)
+find_package(timemory REQUIRED COMPONENTS ${COMPONENTS} OPTIONAL_COMPONENTS mpi manager config cxx)
 
 # this tend to cause the CI to exceed the time-limit
 set(CMAKE_INTERPROCEDURAL_OPTIMIZATION OFF)
