Testing fixes + other
- Fixes to user_bundle_tests when GPU not really available
- papi rate tuple test tolerance updates
- updated example options to not find OpenMP by default
- find MPI fixes
- install all Find*.cmake

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -34,7 +34,7 @@ jobs:
           module load likwid
           module load cuda
           module list
-          spack load boost dyninst papi
+          spack env activate timemory-ci
           source activate
           conda activate timemory
           echo "python: $(which python)"
