--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -203,7 +203,11 @@ if(TIMEMORY_INSTALL_TREE)
     set(Boost_NO_BOOST_CMAKE ON CACHE BOOL "Disable use of BoostConfig.cmake")
     mark_as_advanced(Boost_NO_BOOST_CMAKE)
 
-    timemory_dependent_package(MPI      @TIMEMORY_USE_MPI@)
+    if(@TIMEMORY_USE_MPI@)
+        timemory_dependent_package(MPI @TIMEMORY_USE_MPI@)
+    else()
+        timemory_dependent_package(MPI @MPI_FOUND@ QUIET)
+    endif()
     timemory_dependent_package(caliper  @TIMEMORY_USE_CALIPER@)
     timemory_dependent_package(gotcha   @TIMEMORY_USE_GOTCHA@)
     timemory_dependent_package(OpenMP   @TIMEMORY_USE_OMPT@)
