--- a/examples/ex-python/CMakeLists.txt
+++ b/examples/ex-python/CMakeLists.txt
@@ -42,15 +42,21 @@ if(NOT TARGET pybind11::module)
     endif()
 endif()
 
-find_package(MPI QUIET)
-if(NOT MPI_FOUND)
-    return()
+option(USE_MPI "Enable MPI in timemory example" ON)
+if(USE_MPI)
+    find_package(MPI QUIET)
+    if(NOT MPI_FOUND)
+        return()
+    endif()
 endif()
 
 set(_OMP)
-find_package(OpenMP)
-if(OpenMP_FOUND)
-    set(_OMP OpenMP::OpenMP_CXX)
+option(USE_OPENMP "Enable OpenMP in timemory example" OFF)
+if(TIMEMORY_USE_OMPT OR USE_OPENMP)
+    find_package(OpenMP)
+    if(OpenMP_FOUND)
+        set(_OMP OpenMP::OpenMP_CXX)
+    endif()
 endif()
 
 configure_python_script(bindings)
