Update codecov.yml, CI, kokkosp
- added support for kokkosp_parse_args and kokkosp_print_help

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -6,8 +6,11 @@ codecov:
 
 coverage:
   precision: 2
-  round: down
+  round: up
   range: "70...100"
+  status:
+    project: on
+    patch: off
 
 ignore:
   - "external"
