--- a/source/tools/kokkos-connector/kp_timemory.cpp.in
+++ b/source/tools/kokkos-connector/kp_timemory.cpp.in
@@ -192,6 +192,25 @@ static auto env_configured = (configure_environment(), true);
 //======================================================================================//
 
 extern "C" void
+kokkosp_print_help(char* argv0)
+{
+    std::vector<std::string> _args = { argv0, "--help" };
+    tim::timemory_argparse(_args);
+}
+
+extern "C" void
+kokkosp_parse_args(int argc, char** argv)
+{
+    tim::timemory_init(argc, argv);
+
+    std::vector<std::string> _args{};
+    _args.reserve(argc);
+    for(int i = 0; i < argc; ++i)
+        _args.emplace_back(argv[i]);
+    tim::timemory_argparse(_args);
+}
+
+extern "C" void
 kokkosp_init_library(const int loadSeq, const uint64_t interfaceVer,
                      const uint32_t devInfoCount, void* deviceInfo)
 {
