--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -37,6 +37,7 @@ jobs:
           module load cuda
           module list
           spack env activate timemory-ci
+          spack load boost
           source activate
           conda activate timemory
           echo "python: $(which python)"
