Skip GPU roofline example for CUDA >= 11.0 + plotting fix
- scale down plots during ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
       - run:
           name: build
           command: >
+            export CONTINUOUS_INTEGRATION=true
             export PATH="${HOME}/miniconda/bin:${PATH}" &&
             source activate &&
             conda activate pyctest &&
@@ -62,6 +63,7 @@ jobs:
       - run:
           name: build
           command: >
+            export CONTINUOUS_INTEGRATION=true
             export PATH="${HOME}/miniconda/bin:${PATH}" &&
             source activate &&
             conda activate pyctest &&
@@ -97,6 +99,7 @@ jobs:
       - run:
           name: build
           command: >
+            export CONTINUOUS_INTEGRATION=true
             export PATH="${HOME}/miniconda/bin:${PATH}" &&
             source activate &&
             conda activate pyctest &&
