--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -31,6 +31,7 @@ jobs:
           clean: true
       - name: Build and Test
         run: |
+          export CONTINUOUS_INTEGRATION=true
           git submodule update .
           module load anaconda
           module load likwid
