Compile-time reduction efforts + Kokkosp command-line support + miscellaneous improvements/fixes (#149)
* Reduced the usage of regex to save compile time

- overuse of regex appears to have been a factor in compile time
- updated Caliper submodule to use CALIPER_OPTION_PREFIX
- minor fix to test_tools.py

* removed more regex and other mods

- removed regex from static_properties::matches
- moved get_user_bundle_variables for user_bundle to .cpp file
- restructured do_enumerator_enumerate
- minor fixes to signal_settings

* include fix for user_bundle/components.cpp

* Update circleci/config.yml 

* CI updates

* Default timem + shell to not be interactive

- Update ptl_tests.cpp to enable signal handling

* Update CircleCi

* explicit_{push,pop} quirk + removed out_of_order + cpp files

- removed out_of_order in mpl in favor of get_reference_tuple
- removed unnecessary base + tuple<> functions
- argparse.cpp
- migration to utility.cpp
- header cleanup

* Fix to timemory-pid

* Update utility.hpp

* Minor updates

* cpu_roofline mode fixes + submodule updates

* Fixes: roofline plotter exit code, ex-gpu-roofline

* papi_rate_tuple updates

* Update PTL + TIMEMORY_COMPILER_COUT_OUTPUT in tests

* Python tweaks

* Fix for gpu_roofline event_mode

* plotting and diff output fixes

- formatting
- plotting fixes
- fix to difference outputs in MPI mode
- test MPI + plotting difference

* Testing fixes + other

- Fixes to user_bundle_tests when GPU not really available
- papi rate tuple test tolerance updates
- updated example options to not find OpenMP by default
- find MPI fixes
- install all Find*.cmake

* Update launch-process.sh.in

* Safer memory access in settings::get_global_output_prefix

- dyninst launch_process excludes
- bindings
- launch_process (popen) output
- plotting fixes

* formatting

* Update test_macros.hpp

- use Makefiles for code-coverage

* Update continuous-integrati

--- a/examples/ex-gpu-roofline/CMakeLists.txt
+++ b/examples/ex-gpu-roofline/CMakeLists.txt
@@ -11,6 +11,12 @@ endif()
 
 project(timemory-GPU-Roofline-Example LANGUAGES C CXX CUDA)
 
+if(NOT CUDA_VERSION VERSION_LESS 11.0)
+    message(STATUS "[${PROJECT_NAME}] Skipping GPU roofline for CUDA ${CUDA_VERSION} (>= 11.0)")
+    message(WARNING "[${PROJECT_NAME}] CUPTI profiling API for HW counters not supported yet")
+    return()
+endif()
+
 if("${CMAKE_BUILD_TYPE}" STREQUAL "")
     set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Build type" FORCE)
 endif()
@@ -22,7 +28,7 @@ target_compile_options(gpu-roofline-compile-options INTERFACE
     $<$<COMPILE_LANGUAGE:CUDA>:--default-stream=per-thread>)
 
 set(EXE_NAME ex_gpu_roofline)
-set(COMPONENTS compile-options analysis-tools roofline)
+set(COMPONENTS compile-options analysis-tools roofline cxx)
 set(timemory_FIND_COMPONENTS_INTERFACE timemory-gpu-roofline-example)
 set_source_files_properties(${EXE_NAME}.cpp PROPERTIES
     LANGUAGE CUDA
