--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   docker: circleci/docker@1.4.0
 
 jobs:
-  user-build:
+  quick-build:
     docker:
       - image: jrmadsen/timemory:dev-cpu
     steps:
@@ -26,6 +26,7 @@ jobs:
       - run:
           name: build
           command: >
+            export CONTINUOUS_INTEGRATION=true
             export PATH="${HOME}/miniconda/bin:${PATH}" &&
             source activate &&
             conda activate pyctest &&
@@ -36,15 +37,11 @@ jobs:
       - run:
           name: install
           command: >
-            cd build-timemory/Linux &&
-            make install -j &&
+            cmake --build build-timemory/Linux --target install --parallel 2 &&
             export CMAKE_PREFIX_PATH=${HOME}/timemory-install:${CMAKE_PREFIX_PATH} &&
-            cd ../../examples &&
-            mkdir build-examples &&
-            cd build-examples &&
-            cmake .. &&
-            make ex_array_of_bundles
-  dev-build:
+            cmake -B build-examples -DUSE_MPI=ON examples &&
+            cmake --build build-examples --target ex_array_of_bundles
+  cpu-dev-build:
     docker:
       - image: jrmadsen/timemory:dev-cpu
     steps:
@@ -66,6 +63,7 @@ jobs:
       - run:
           name: build
           command: >
+            export CONTINUOUS_INTEGRATION=true
             export PATH="${HOME}/miniconda/bin:${PATH}" &&
             source activate &&
             conda activate pyctest &&
@@ -76,17 +74,51 @@ jobs:
       - run:
           name: install
           command: >
-            cd build-timemory/Linux &&
-            make install -j &&
+            cmake --build build-timemory/Linux --target install --parallel 2 &&
             export CMAKE_PREFIX_PATH=${HOME}/timemory-install:${CMAKE_PREFIX_PATH} &&
-            cd ../../examples &&
-            mkdir build-examples &&
-            cd build-examples &&
-            cmake ..
+            cmake -B build-examples -DUSE_MPI=ON examples
+  gpu-dev-build:
+    docker:
+      - image: jrmadsen/timemory:dev-gpu
+    steps:
+      - run:
+          name: apt-fixes
+          command: >
+            apt-get update &&
+            apt-get install -y git ssh
+      - checkout
+      - run:
+          name: conda-installation
+          command: >
+            wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ${HOME}/miniconda.sh &&
+            bash ${HOME}/miniconda.sh -b -p ${HOME}/miniconda &&
+            export PATH="${HOME}/miniconda/bin:${PATH}" &&
+            conda config --set always_yes yes --set changeps1 no &&
+            conda create -c defaults -c conda-forge -n pyctest python=3.7.8 pyctest &&
+            source activate pyctest
+      - run:
+          name: build
+          command: >
+            export CONTINUOUS_INTEGRATION=true
+            export PATH="${HOME}/miniconda/bin:${PATH}" &&
+            source activate &&
+            conda activate pyctest &&
+            export CMAKE_PREFIX_PATH="${CMAKE_PREFIX_PATH}:$(dirname $(dirname $(find /opt/software/ | grep 'cuda-' | grep 'cuda\.h$')))" &&
+            python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -j 1
+            --build-libs shared --cuda --gotcha --gperftools --profile=cpu --tools avail mallocp --cxx-standard=17
+            -- -V --output-on-failure -E cuda
+            -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA,COMPILER_INSTRUMENTATION}=OFF -DPYTHON_EXECUTABLE=$(which python) -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
+      - run:
+          name: install
+          command: >
+            cmake --build build-timemory/Linux --target install --parallel 2 &&
+            export CMAKE_PREFIX_PATH=${HOME}/timemory-install:${CMAKE_PREFIX_PATH} &&
+            cmake -B build-examples -DUSE_MPI=OFF examples
 
 workflows:
   version: 2
   build:
     jobs:
-      - user-build
-      - dev-build
+      - quick-build
+      - cpu-dev-build
+      - gpu-dev-build
