--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -8,37 +8,45 @@ jobs:
       max-parallel: 2
       fail-fast: true
       matrix:
-        # compiler: ['gcc-6', 'gcc-7', 'gcc-8', 'gcc-9', 'gcc-10', 'clang-6.0', 'clang-7', 'clang-8', 'clang-9', 'clang-10', 'clang-11', 'clang-12']
-        build_type: ['Release']
-        compiler: ['gcc-9', 'gcc-10', 'clang-10', 'clang-11', 'clang-12']
-        standard: ['17']
-        tools: ['avail kokkos kokkos-config dyninst mpip ncclp mallocp compiler']
-        extra_args: ['--python']
         include:
           - build_type: 'Debug'
             compiler: 'gcc-7'
             standard: '17'
             tools: 'dyninst mpip ncclp mallocp'
             extra_args: '--coverage --minimal'
+            generator: ''
+        # compiler: ['gcc-6', 'gcc-7', 'gcc-8', 'gcc-9', 'gcc-10', 'clang-6.0', 'clang-7', 'clang-8', 'clang-9', 'clang-10', 'clang-11', 'clang-12']
+        build_type: ['Release']
+        compiler: ['gcc-9', 'gcc-10', 'clang-10', 'clang-11', 'clang-12']
+        standard: ['17']
+        tools: ['avail kokkos kokkos-config dyninst mpip ncclp mallocp compiler']
+        extra_args: ['--python']
+        generator: ['-G Ninja']
     runs-on: self-hosted
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2.2.0
+        uses: actions/checkout@v2
         with:
           submodules: true
+          clean: true
       - name: Build and Test
         run: |
+          export CONTINUOUS_INTEGRATION=true
+          git submodule update .
           module load anaconda
           module load likwid
           module load cuda
           module list
-          spack load boost dyninst papi
+          spack env activate timemory-ci
+          spack load dyninst boost
           source activate
           conda activate timemory
           echo "python: $(which python)"
+          env
+          if [ -z "$(echo ${LD_LIBRARY_PATH} | grep timemory-ci)" ]; then echo "Warning: incorrect LD_LIBRARY_PATH: ${LD_LIBRARY_PATH}"; fi
           BASE_ARGS="--papi --likwid --mpi --cuda --cupti --gotcha --caliper --extra-optimizations --tools ${{ matrix.tools }} -SF --pyctest-model=Continuous -j 6"
           CTEST_ARGS="-V"
-          CMAKE_ARGS="-DCMAKE_INSTALL_PREFIX=${PWD}/install-timemory -G Ninja"
+          CMAKE_ARGS="-DCMAKE_INSTALL_PREFIX=${PWD}/install-timemory ${{ matrix.generator }}"
           export CC=${{ matrix.compiler }}
           export CXX="$(echo '${{ matrix.compiler }}' | sed 's/gcc/g++/1' | sed 's/clang/clang++/1')"
           python ./pyctest-runner.py --cxx-standard=${{ matrix.standard }} --pyctest-build-type=${{ matrix.build_type }} ${{ matrix.extra_args }} ${BASE_ARGS} -- ${CTEST_ARGS} -- ${CMAKE_ARGS}
