--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -126,7 +126,7 @@ add_timemory_test_target()
 
 add_subdirectory(external)
 
-set(compiler_instr_env "TIMEMORY_SUPPRESS_CONFIG=ON")
+set(compiler_instr_env "TIMEMORY_SUPPRESS_CONFIG=ON;TIMEMORY_COMPILER_COUT_OUTPUT=ON")
 
 if(TARGET timemory::timemory-compiler-instrument-shared)
     add_timemory_google_test(compiler_instrument_shared_tests
@@ -780,7 +780,7 @@ if(TIMEMORY_USE_PYTHON AND PYTHON_EXECUTABLE)
 
     add_test(
         NAME                python_tests
-        COMMAND             ${PYTHON_EXECUTABLE} -m timemory.test
+        COMMAND             ${PYTHON_EXECUTABLE} -m timemory.test -v -v
         WORKING_DIRECTORY   ${PROJECT_BINARY_DIR})
 endif()
 
