--- a/source/timemory/components/CMakeLists.txt
+++ b/source/timemory/components/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(gotcha)
 add_subdirectory(gperftools)
 add_subdirectory(likwid)
 add_subdirectory(io)
+add_subdirectory(network)
 add_subdirectory(ompt)
 add_subdirectory(rusage)
 add_subdirectory(papi)
