Fixes to kokkos issues with kokkosp_allocate_data
- adds support for kokkos kernel logging in main library
- docs updates

--- a/cmake/Templates/Doxyfile.in
+++ b/cmake/Templates/Doxyfile.in
@@ -306,6 +306,7 @@ SEARCH_INCLUDES        = YES
 INCLUDE_PATH           =
 INCLUDE_FILE_PATTERNS  =
 PREDEFINED             = TIMEMORY_VISIBLE= \
+                         TIMEMORY_NODISCARD= \
                          TIMEMORY_NEVER_INSTRUMENT= \
                          TIMEMORY_ALWAYS_INLINE= \
                          TIMEMORY_HOT_INLINE= \
