--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -367,7 +367,7 @@ version = sys.modules[__name__].__getattribute__("version")
 
 # this is required for correct pickling
 try:
-    if "line_profiler" not in sys.modules:
+    if "line_profiler" not in sys.modules and platform.system() != "Darwin":
         from . import line_profiler as lineprof
 
         _lineprof = lineprof._line_profiler
